--- a/src/PytorchNvCodec/pyproject.toml
+++ b/src/PytorchNvCodec/pyproject.toml
@@ -1,3 +1,13 @@
+[tool.poetry]
+name = "VPF"
+version = "2.0.0"
+description = "Video Processing Framework"
+authors = ["TBD"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+torch = "2.0.0"
+
 [build-system]        
 requires = [
   "setuptools>=42",
