--- a/src/PytorchNvCodec/pyproject.toml
+++ b/src/PytorchNvCodec/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "VPF"
+name = "PytorchNvCodec"
 version = "2.0.0"
 description = "Video Processing Framework"
 authors = ["TBD"]
