--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,14 @@
+[tool.poetry]
+name = "PyNvCodec"
+version = "2.0.0"
+description = "Video Processing Framework"
+authors = ["TBD"]
+readme = "README.md"
+
+[tool.poetry.build]
+generate-setup-file = true
+script = "setup.py"
+
 [build-system]        
 requires = [
   "setuptools>=42",
